--- a/src/Components/RandomQuote/Quote.scss
+++ b/src/Components/RandomQuote/Quote.scss
@@ -11,16 +11,6 @@ div {
   z-index: 2;
 }
 
-body {
-  background-color: #333;
-  color: #333;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
 .footer {
   width: 450px;
   text-align: center;
@@ -28,16 +18,18 @@ body {
   margin: 15px auto 30px auto;
   font-size: 0.8em;
   color: #fff;
-  a {
-    font-weight: 500;
-    text-decoration: none;
-    color: #fff;
-  }
 }
+
 #quote-box {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   border-radius: 3px;
   position: relative;
-  //margin:8% auto auto auto;
+  margin:8% auto auto auto;
   width: 450px;
   padding: 40px 50px;
   display: table;
@@ -88,9 +80,9 @@ body {
         padding: 0px;
         padding-top: 8px;
         text-align: center;
-        font-size: 1.2em;
+        font-size: 1em;
         margin-right: 5px;
-        height: 30px;
+        height: 38px;
         width: 40px;
       }
       &#new-quote {
