--- a/src/Components/MarkdownPreviewer/Markdown.scss
+++ b/src/Components/MarkdownPreviewer/Markdown.scss
@@ -1,3 +1,7 @@
+.container-fluid{
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+}
+
 #preview {
 table {
     border-collapse: collapse;
