--- a/src/Components/Calculator/Calculator.scss
+++ b/src/Components/Calculator/Calculator.scss
@@ -4,6 +4,7 @@
 */
 
 main {
+    background-color: white;
     width: 500px;
     margin: 4% auto;
     font-family: 'Source Sans Pro', sans-serif;
