--- a/src/Components/CV/CV.css
+++ b/src/Components/CV/CV.css
@@ -42,11 +42,15 @@
 .resume .resume_left .resume_profile {
   width: 100%;
   height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .resume .resume_left .resume_profile img {
-  width: 100%;
-  height: 100%;
+  width: 75%;
+  height: 75%;
+  border-radius: 280px;
 }
 
 .resume .resume_left .resume_content {
@@ -97,7 +101,7 @@
 }
 
 .resume .icon i,
-.resume .resume_right .resume_hobby ul li i {
+.resume .resume_right .resume_projects ul li i {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -117,32 +121,26 @@
 }
 
 .resume .resume_left .resume_skills ul li .skill_name {
-  width: 25%;
+  width: 100%;
+  font-weight: 600;
 }
 
-.resume .resume_left .resume_skills ul li .skill_progress {
-  width: 60%;
-  margin: 0 5px;
-  height: 5px;
-  background: #009fd9;
-  position: relative;
+.resume .resume_left .resume_skills ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-
-.resume .resume_left .resume_skills ul li .skill_per {
-  width: 15%;
-}
-
-.resume .resume_left .resume_skills ul li .skill_progress span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  background: #fff;
-}
-
 .resume .resume_left .resume_social .semi-bold {
   color: #fff;
   margin-bottom: 3px;
+}
+
+.resume .resume_left .resume_hobby .semi-bold {
+  color: #fff;
+  margin-bottom: 3px;
+}
+
+.resume .resume_left .resume_hobby ul li {
+  padding-bottom: 12px;
 }
 
 .resume .resume_right {
@@ -153,6 +151,16 @@
 
 .resume .resume_right .bold {
   color: #0bb5f4;
+}
+
+.resume .resume_right .hashtag{
+  color: #0bb5f4;
+  font-size: 15px;
+}
+
+.resume .resume_right .hashtag:hover{
+  color: #008bbf;
+  text-decoration: underline;
 }
 
 .resume .resume_right .resume_work ul,
@@ -209,38 +217,6 @@
   width: 2px;
   height: 110px;
   background: #0bb5f4;
-}
-
-.resume .resume_right .resume_hobby ul {
-  display: flex;
-  justify-content: space-between;
-}
-
-.resume .resume_right .resume_hobby ul li {
-  width: 80px;
-  height: 80px;
-  border: 2px solid #0bb5f4;
-  border-radius: 50%;
-  position: relative;
-  color: #0bb5f4;
-}
-
-.resume .resume_right .resume_hobby ul li i {
-  font-size: 30px;
-}
-
-.resume .resume_right .resume_hobby ul li:before {
-  content: "";
-  position: absolute;
-  top: 40px;
-  right: -52px;
-  width: 50px;
-  height: 2px;
-  background: #0bb5f4;
-}
-
-.resume .resume_right .resume_hobby ul li:last-child:before {
-  display: none;
 }
 
 a:link, a:visited, a:hover {
