--- a/src/Components/CV/CV.scss
+++ b/src/Components/CV/CV.scss
@@ -25,20 +25,31 @@
 }
 
 .resume {
-  width: 800px;
+  max-width: 800px;
   height: auto;
   display: flex;
   padding-top: 50px;
   padding-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
+
+  @media (max-width:820px){
+      height: auto;
+      display: inline;
+      max-width: 100%;
+      margin: 0px;
+      padding: 0px 15px;
+  }
 }
 
 .resume .resume_left {
-  width: 280px;
+  width: 35%;
   background: #0bb5f4;
-}
 
+  @media (max-width: 820px) {
+    width: auto;
+  }
+}
 .resume .resume_left .resume_profile {
   width: 100%;
   height: 280px;
@@ -51,10 +62,21 @@
   width: 75%;
   height: 75%;
   border-radius: 280px;
+  @media (max-width: 820px) {
+    width: auto;
+  }
 }
 
 .resume .resume_left .resume_content {
   padding: 0 25px;
+
+
+  @media (max-width: 820px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .resume .title {
@@ -63,10 +85,19 @@
 
 .resume .resume_left .bold {
   color: #fff;
+
+  @media (max-width: 820px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .resume .resume_left .regular {
   color: #b1eaff;
+  @media (max-width: 820px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .resume .resume_item {
@@ -74,15 +105,34 @@
   border-bottom: 2px solid #b1eaff;
 }
 
+
 .resume .resume_left .resume_item:last-child,
 .resume .resume_right .resume_item:last-child {
   border-bottom: 0px;
+}
+.resume .resume_left ul{
+  @media (max-width: 820px){
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (max-width: 510px){
+    grid-template-columns: 1fr; 
+  }
 }
 
 .resume .resume_left ul li {
   display: flex;
   margin-bottom: 10px;
   align-items: center;
+
+  @media (max-width: 820px) {
+    padding-left: 10px;
+  }
+
+  // @media (max-width: 755px){
+  //   float: none;
+  // }
 }
 
 .resume .resume_left ul li:last-child {
@@ -128,10 +178,30 @@
 .resume .resume_left .resume_skills ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
+
+  @media (max-width: 820px){
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
+  }
+  @media (max-width: 510px){
+    grid-template-columns: 1fr 1fr; 
+  }
 }
+
 .resume .resume_left .resume_social .semi-bold {
   color: #fff;
   margin-bottom: 3px;
+}
+
+.resume .resume_left .resume_social{
+  @media (max-width: 820px) {
+    border-bottom: 0px;
+  }
+}
+
+.resume .resume_left .resume_hobby{
+  @media (max-width: 820px) {
+    display: none;
+  }
 }
 
 .resume .resume_left .resume_hobby .semi-bold {
@@ -144,9 +214,29 @@
 }
 
 .resume .resume_right {
-  width: 520px;
+  width: 65%;
   background: #fff;
   padding: 25px;
+
+  @media (max-width: 820px) {
+    width: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.resume .resume_right .bold {
+
+  @media (max-width: 820px) {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.text{
+  text-indent: 0.5em;
 }
 
 .resume .resume_right .bold {
@@ -183,6 +273,11 @@
   margin-bottom: 20px;
 }
 
+.resume .resume_right .resume_projects ul li .info .semi-bold{
+  display: flex;
+  justify-content: center;
+}
+
 .resume .resume_right ul li:last-child .info {
   margin-bottom: 0;
 }
@@ -207,6 +302,29 @@
   width: 2px;
   height: 130px;
   background: #0bb5f4;
+}
+.resume .resume_right .resume_work ul li:nth-child(1)::after {
+  @media (max-width: 314px){
+    height: 152px;
+  }
+  @media (max-width: 312px){
+    height: 175px;
+  }
+}
+
+.resume .resume_right .resume_work ul li:nth-child(2)::after {
+  @media (max-width: 479px){
+    height: 152px;
+  }
+  @media (max-width: 350px){
+    height: 175px;
+  }
+  @media (max-width: 291px){
+    height: 197px;
+  }
+  @media (max-width: 254px){
+    height: 218px;
+  }
 }
 
 .resume .resume_right .resume_education ul li:after{
