--- a/src/Components/Calculator/Calculator.scss
+++ b/src/Components/Calculator/Calculator.scss
@@ -13,6 +13,10 @@ main {
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+
+    @media (max-width: 520px) {
+      width: 100%;
+    }
   }
   
   .calculator {
@@ -20,6 +24,9 @@ main {
     -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
     border-radius: 1px;
+    @media (max-width: 520px) {
+      box-shadow: none;
+    }
   }
 
   .formulaScreen{
@@ -33,6 +40,9 @@ main {
     font-size: 0.8rem;
     overflow-x: auto;
     transition: all .2s ease-in-out;
+    @media (max-width: 520px) {
+      margin-right: 0;
+    }
   }
   
   .input {
@@ -46,12 +56,23 @@ main {
     font-size: 1rem;
     overflow-x: auto;
     transition: all .2s ease-in-out;
+    @media (max-width: 520px) {
+      margin-right: 0;
+    }
   }
   
   .input:hover {
     border: 1px solid #bbb;
     -webkit-box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  }
+
+  .bottomPart{
+    @media (max-width: 520px) {
+      display: grid;
+      width: 100%;
+      grid-template-columns: 1fr 25%;
+    }
   }
   
   .operators button {
@@ -65,6 +86,11 @@ main {
     cursor: pointer;
     background-color: #ddd;
     transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
+    @media (max-width: 520px) {
+      
+      width: 25%;
+      margin: 0;
+    }
   }
   
   .operators button:hover {
@@ -80,6 +106,9 @@ main {
   
   .leftPanel {
     display: inline-block;
+    // @media (max-width: 520px) {
+    //   display: block;
+    // }
   }
   
   .numbers button {
@@ -93,6 +122,11 @@ main {
     cursor: pointer;
     background-color: #f9f9f9;
     transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
+
+    @media (max-width: 520px) {
+      width: 33.3%;
+      margin: 0;
+    }
   }
   
   .numbers button:hover {
@@ -111,7 +145,7 @@ main {
     border: 1px solid #3079ED;
     border-radius: 1px;
     width: 24%;
-    height: 319px;
+    height: 320px;
     text-align: center;
     padding: 127px 10px;
     margin: 10px 6px 10px 0;
@@ -120,6 +154,12 @@ main {
     color: #FFF;
     background-color: #4d90fe;
     transition: all .2s ease-in-out;
+
+    @media (max-width: 520px) {
+      margin: 0;
+      width: 100%;
+      height: 87%;
+    }
   }
   
   button.equal:hover {
