--- a/src/Components/MarkdownPreviewer/Markdown.module.scss
+++ b/src/Components/MarkdownPreviewer/Markdown.module.scss
@@ -9,6 +9,12 @@
   background-color: #28a745;
   color: #fff;
 }
+
+.header h1{
+  @media (max-width: 450px) {
+    font-size: 1.5rem;
+  }
+}
 .subheader{
   display: flex;
   justify-content: center;
